gitops/clusters/dev/apps/ad-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ad-ui
  namespace: ad-ui
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ad-ui
  ports:
    - name: http
      port: 80
      targetPort: http
