gitops/clusters/dev/apps/ad-ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ad-ui
  namespace: ad-ui
  annotations:
    cert-manager.io/cluster-issuer: selfsigned
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ad.dev.w237.local
      secretName: ad-ui-tls
  rules:
    - host: ad.dev.w237.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ad-ui
                port:
                  number: 80
